# zkdna

./: .gitignore  .gitmodules  README.md
contracts/: remappings.txt
contracts/src/: DNARegistry.sol  Labratory.sol
contracts/test/: DNARegistry.t.sol
dna_merkle_lib/: Cargo.toml
dna_merkle_lib/src/: dna_encoder.rs  input.rs  keccak.rs  lib.rs  merkle.rs
dna_proof/: Cargo.toml
dna_proof/src/: lib.rs  main.rs  proof.rs
dna_proof/src/merkle/: encoder.rs  helpers.rs  keccak.rs  mod.rs
merkle/: Cargo.toml
non_zk_e2e_test/: Cargo.toml
non_zk_e2e_test/src/: main.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
registration/: Cargo.toml
registration/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
static/: dummy_genome.txt  genome.txt
test_merkle/: Cargo.toml
test_merkle/src/: main.rs
