[package]
name = "dna_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "master", features = ["keccak"] }
hex = "0.4"
tiny-merkle = { git = "https://github.com/zobront/tiny-merkle", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
