[workspace]
[package]
version = "0.1.0"
name = "zkdna-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.4-testnet", features = [ "plonk" ] }
dna_proof = { path = "../dna_proof" }
hex = "0.4"
axum = "0.7.5"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet"  }
